--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "async-select-paginate",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.jsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "Abdulkader Shanbour",
   "license": "MIT",
   "dependencies": {
+    "@babel/runtime": "^7.28.4",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@storybook/react": "^9.1.1",
-    "@testing-library/react": "^16.3.0",
+    "@types/node": "^24.3.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-select-async-paginate": "^0.7.11"
@@ -25,11 +28,28 @@
   },
   "homepage": "https://github.com/abd-shan/async-select-paginate#readme",
   "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/plugin-transform-class-properties": "^7.27.1",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
+    "@babel/plugin-transform-private-property-in-object": "^7.27.1",
+    "@babel/plugin-transform-runtime": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@rollup/plugin-typescript": "^12.1.4",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.1.9",
+    "babel-jest": "^30.1.2",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.0.5",
+    "jest-environment-jsdom": "^30.1.2",
     "rollup": "^4.46.2",
     "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-postcss": "^4.0.2",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.9.2"
   }
 }
