--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
   "name": "async-select-paginate",
   "version": "1.0.0",
-  "main": "index.jsx",
+  "type": "module",
+  "description": "A generic async select component with infinite scroll, animations, and customizable option rendering.",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
-    "test": "jest"
+    "build": "rollup -c rollup.config.mjs",
+    "test": "jest --config jest.config.cjs",
+    "test:watch": "jest --watch",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "prepublishOnly": "npm run build"
   },
-  "keywords": [],
+  "keywords": [
+    "react",
+    "select",
+    "async",
+    "pagination",
+    "infinite-scroll",
+    "typescript",
+    "component"
+  ],
   "author": "Abdulkader Shanbour",
   "license": "MIT",
-  "dependencies": {
-    "@babel/runtime": "^7.28.4",
-    "@rollup/plugin-commonjs": "^28.0.6",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@storybook/react": "^9.1.1",
-    "@types/node": "^24.3.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-select-async-paginate": "^0.7.11"
-  },
-  "description": "A generic async select component with infinite scroll, animations, and customizable option rendering.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/abd-shan/async-select-paginate.git"
@@ -27,6 +37,14 @@
     "url": "https://github.com/abd-shan/async-select-paginate/issues"
   },
   "homepage": "https://github.com/abd-shan/async-select-paginate#readme",
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0",
+    "react-select-async-paginate": "^0.7.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.28.4"
+  },
   "devDependencies": {
     "@babel/core": "^7.28.4",
     "@babel/plugin-transform-class-properties": "^7.27.1",
@@ -36,16 +54,23 @@
     "@babel/preset-env": "^7.28.3",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.4",
+    "@storybook/react": "^9.1.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.3.1",
     "@types/react": "^19.1.9",
     "babel-jest": "^30.1.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.5",
     "jest-environment-jsdom": "^30.1.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-select-async-paginate": "^0.7.11",
     "rollup": "^4.46.2",
     "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-postcss": "^4.0.2",
