publish package keyword

--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "react",
     "select",
     "async",
+    "field",
     "pagination",
+    "reusable-component",
     "infinite-scroll",
     "typescript",
-    "component"
+    "component",
+    "react-component",
+    "ui",
+    "interface"
   ],
   "author": "Abdulkader Shanbour",
   "license": "MIT",
@@ -33,19 +38,6 @@
     "type": "git",
     "url": "git+https://github.com/abd-shan/async-select-paginate.git"
   },
-    "keywords": [
-    "react",
-    "crud",
-    "table",
-    "search",
-    "reusable-component",
-    "data-table",
-    "form",
-    "management",
-    "react-component",
-    "ui",
-    "interface"
-  ],
   "bugs": {
     "url": "https://github.com/abd-shan/async-select-paginate/issues"
   },
